# mako_infinite_shuffle

./: Cargo.toml  readme.md
examples/: readme.rs
src/: lfsr.rs  lib.rs  rng.rs
