[package]
name = "mako_infinite_shuffle"
description = "Iterates over combinatorial spaces in a random order"
author = "mako yass"
version = "0.3.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "0.8.5"
# crypto_secretbox = "0.1.1"
# fpe = "0.6.1"
# aes = "0.8.3"
# cloudproof_fpe = "0.2.2"
number-encoding = "0.2.1"