[package]
name = "mako_infinite_shuffle"
description = "Iterates over combinatorial spaces in a random order"
version = "0.4.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/makoConstruct/mako_infinite_shuffle"
readme = "readme.md"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand = "0.8.5"
# crypto_secretbox = "0.1.1"
# fpe = "0.6.1"
# aes = "0.8.3"
# cloudproof_fpe = "0.2.2"
number-encoding = "0.2.1"